--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
 		"postcss-preset-env": "^6.7.0",
+		"prettier": "^2.0.5",
+		"stylelint-config-recommended": "^3.0.0",
 		"typescript": "^3.9.6"
 	}
 }
