--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,json,css,md}'"
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
