--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-    "typecheck": "tsc",
-    "format": "prettier --write './**/*.{ts,tsx,js,json,css,md}'"
+		"typecheck": "tsc",
+		"format": "prettier --write './**/*.{ts,tsx,js,json,css,md}'"
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.10",
+		"@types/jest": "^26.0.4",
 		"@types/node": "^14.0.23",
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
