--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "wcd-ssr-ssg",
 	"version": "1.0.0",
+	"main": "index.js",
 	"repository": "https://github.com/DopamineDriven/wcd-ssr-ssg.git",
 	"author": "Andrew Ross <andrew.simpson.ross@gmail.com>",
 	"license": "MIT",
